gnstlib_fortran/gnstlib.h

// compute erf(z)
std::complex<double> gnstlib_cerf(const std::complex<double> z, int& err_id);
// compute erfc(z)
std::complex<double> gnstlib_cerfc(const std::complex<double> z, int& err_id);
// compute erfcx(z)
std::complex<double> gnstlib_cerfcx(const std::complex<double> z, int& err_id);
// compute erfi(z)
std::complex<double> gnstlib_cerfi(const std::complex<double> z, int& err_id);
// compute dawson(z)
std::complex<double> gnstlib_cdawson(const std::complex<double> z, int& err_id);
// compute faddeeva(z)
std::complex<double> gnstlib_faddeeva(const std::complex<double> z, 
      int& err_id);
// compute fresnelc(z)
std::complex<double> gnstlib_cfresnelc(const std::complex<double> z, 
      int& err_id);
// compute fresnels(z)
std::complex<double> gnstlib_cfresnels(const std::complex<double> z, 
      int& err_id);
/* inverse functions */

// compute inverse erf(x)
double gnstlib_inverf(const double x, int& err_id);
// compute inverse erfc(x)
double gnstlib_inverfc(const double x, int& err_id);
/* vectorized versions */

void gnstlib_erf_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_erfc_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_erfcx_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_erfi_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_dawson_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_fresnelc_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_fresnels_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_inverf_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_inverfc_vec(const int n, const double *v, double *r, 
      unsigned short option = 0);
void gnstlib_cerf_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cerfc_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cerfcx_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cerfi_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cdawson_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_faddeeva_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cfresnelc_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
void gnstlib_cfresnels_vec(const int n, const std::complex<double> *v, 
      std::complex<double> *r, unsigned short option = 0);
/* Incomplete gamma and generalized exponential integral */
/******************************************************************************/

/* main functions */

// compute regularized incomplete gamma function P(a, x)
double gnstlib_gammainc_p(const double a, const double x, int& err_id);
// compute regularized incomplete gamma function Q(a, x)
double gnstlib_gammainc_q(const double a, const double x, int& err_id);
// compute generalized exponential integral
double gnstlib_expint(const double v, const double x, int& err_id);
double gnstlib_expint_acc(const int n, const double e, const double x, 
  int& err_id);