gnstlib_fortran/gnstlib_cdef.f90


    function gnstlib_cerf_c(z, err_id) bind(C, name="gnstlib_cerf")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cerf_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cerf_c

    function gnstlib_cerfc_c(z, err_id) bind(C, name="gnstlib_cerfc")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cerfc_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cerfc_c

    function gnstlib_cerfcx_c(z, err_id) bind(C, name="gnstlib_cerfcx")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cerfcx_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cerfcx_c

    function gnstlib_cerfi_c(z, err_id) bind(C, name="gnstlib_cerfi")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cerfi_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cerfi_c

    function gnstlib_cdawson_c(z, err_id) bind(C, name="gnstlib_cdawson")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cdawson_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cdawson_c

    function gnstlib_faddeeva_c(z, err_id) bind(C, name="gnstlib_faddeeva")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_faddeeva_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_faddeeva_c

    function gnstlib_cfresnelc_c(z, err_id) bind(C, name="gnstlib_cfresnelc")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cfresnelc_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cfresnelc_c

    function gnstlib_cfresnels_c(z, err_id) bind(C, name="gnstlib_cfresnels")
        use iso_c_binding
        implicit none
        complex(c_double_complex) :: gnstlib_cfresnels_c
        complex(c_double_complex), intent(in), value :: z
        integer(c_int), intent(out) :: err_id
    end function gnstlib_cfresnels_c

    function gnstlib_inverf_c(x, err_id) bind(C, name="gnstlib_inverf")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_inverf_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_inverf_c

    function gnstlib_inverfc_c(x, err_id) bind(C, name="gnstlib_inverfc")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_inverfc_c
        real(c_double), intent(in), value :: x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_inverfc_c

    subroutine gnstlib_erf_vec_c(n, v, r, option) bind(C, name="gnstlib_erf_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_erf_vec_c

    subroutine gnstlib_erfc_vec_c(n, v, r, option) bind(C, name="gnstlib_erfc_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_erfc_vec_c

    subroutine gnstlib_erfcx_vec_c(n, v, r, option) bind(C, name="gnstlib_erfcx_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_erfcx_vec_c

    subroutine gnstlib_erfi_vec_c(n, v, r, option) bind(C, name="gnstlib_erfi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_erfi_vec_c

    subroutine gnstlib_dawson_vec_c(n, v, r, option) bind(C, name="gnstlib_dawson_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_dawson_vec_c

    subroutine gnstlib_fresnelc_vec_c(n, v, r, option) bind(C, name="gnstlib_fresnelc_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_fresnelc_vec_c

    subroutine gnstlib_fresnels_vec_c(n, v, r, option) bind(C, name="gnstlib_fresnels_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_fresnels_vec_c

    subroutine gnstlib_inverf_vec_c(n, v, r, option) bind(C, name="gnstlib_inverf_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_inverf_vec_c

    subroutine gnstlib_inverfc_vec_c(n, v, r, option) bind(C, name="gnstlib_inverfc_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        real(c_double), intent(in)  :: v(n)
        real(c_double), intent(out) :: r(n)
    end subroutine gnstlib_inverfc_vec_c

    subroutine gnstlib_cerf_vec_c(n, v, r, option) bind(C, name="gnstlib_cerf_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cerf_vec_c

    subroutine gnstlib_cerfc_vec_c(n, v, r, option) bind(C, name="gnstlib_cerfc_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cerfc_vec_c

    subroutine gnstlib_cerfcx_vec_c(n, v, r, option) bind(C, name="gnstlib_cerfcx_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cerfcx_vec_c

    subroutine gnstlib_cerfi_vec_c(n, v, r, option) bind(C, name="gnstlib_cerfi_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cerfi_vec_c

    subroutine gnstlib_cdawson_vec_c(n, v, r, option) bind(C, name="gnstlib_cdawson_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cdawson_vec_c

    subroutine gnstlib_faddeeva_vec_c(n, v, r, option) bind(C, name="gnstlib_faddeeva_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_faddeeva_vec_c

    subroutine gnstlib_cfresnelc_vec_c(n, v, r, option) bind(C, name="gnstlib_cfresnelc_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cfresnelc_vec_c

    subroutine gnstlib_cfresnels_vec_c(n, v, r, option) bind(C, name="gnstlib_cfresnels_vec")
        use iso_c_binding
        implicit none

        integer(c_int), intent(in), value :: n, option
        complex(c_double_complex), intent(in)  :: v(n)
        complex(c_double_complex), intent(out) :: r(n)
    end subroutine gnstlib_cfresnels_vec_c

    function gnstlib_gammainc_p_c(a, x, err_id) bind(C, name="gnstlib_gammainc_p")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_gammainc_p_c
        real(c_double), intent(in), value :: a, x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_gammainc_p_c

    function gnstlib_gammainc_q_c(a, x, err_id) bind(C, name="gnstlib_gammainc_q")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_gammainc_q_c
        real(c_double), intent(in), value :: a, x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_gammainc_q_c

    function gnstlib_expint_c(v, x, err_id) bind(C, name="gnstlib_expint")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_expint_c
        real(c_double), intent(in), value :: v, x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_expint_c

    function gnstlib_expint_acc_c(n, e, x, err_id) bind(C, name="gnstlib_expint_acc")
        use iso_c_binding
        implicit none
        real(c_double) :: gnstlib_expint_acc_c
        integer(c_int), intent(in), value :: n
        real(c_double), intent(in), value :: e, x
        integer(c_int), intent(out) :: err_id
    end function gnstlib_expint_acc_c

end interface